# keyless-zk-proofs

./: .gitignore  .gitmodules  .pre-commit-config.yaml  Cargo.toml  Dockerfile  README.md  dev_setup.sh  rust-toolchain.toml
.cargo/: config.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: build-image.yaml  hello.yaml  run-ceremony.yaml  run-tests.yaml
circuit/: Cargo.toml  README.md  package-lock.json
circuit/src/: arrays.rs  base64.rs  bigint.rs  hash_to_field.rs  jwt_field_parsing.rs  lib.rs  misc.rs  packing.rs  rsa.rs  sha.rs
circuit/templates/: keyless.circom  main.circom  mainTemplate.circom
circuit/templates/helpers/arrays/: IsSubstring.circom
circuit/templates/helpers/base64url/: Base64UrlDecode.circom  README.md
circuit/templates/helpers/bigint/: CheckCarryToZero.circom
circuit/templates/helpers/hashtofield/: HashBytesToFieldWithLen.circom  HashElemsToField.circom
circuit/templates/helpers/jwt/: BracketsDepthMap.circom  BracketsMap.circom  EmailVerifiedCheck.circom  EnforceNotNested.circom  ParseEmailVerifiedField.circom  ParseJWTFieldSharedLogic.circom  ParseJWTFieldWithQuotedValue.circom  ParseJWTFieldWithUnquotedValue.circom  StringBodies.circom
circuit/templates/helpers/packing/: BigEndianBits2Num.circom  Bytes2BigEndianBits.circom  ChunksToFieldElems.circom  Num2BigEndianBits.circom
circuit/templates/helpers/rsa/: FpMul.circom  FpPow65537Mod.circom  RSA_2048_e_65537_PKCS1_V1_5_Verify.circom  RSA_PKCS1_v1_5_Verify.circom  bigint.circom
circuit/templates/helpers/sha/: SHA2_256_PaddingVerify.circom  SHA2_256_Prepadded_Hash.circom
circuit/templates/helpers/strings/: AsciiDigitsToScalar.circom  AssertIsConcatenation.circom  IsSubstring.circom
circuit/templates/stdlib/circuits/: BinaryToMaxBitsArray.circom
circuit/tests/arrays/: assert_is_concatenation_large_test.circom  assert_is_concatenation_small_test.circom  assert_is_concatenation_test.circom
git-hooks/: compile-circom-if-needed-pre-commit
keyless-common/: Cargo.toml
keyless-common/src/: groth16_vk.rs  lib.rs  logging.rs  main.rs  snark_js_groth16.rs  types.rs
keyless-common/src/input_processing/: bits.rs  circuit_config.rs  circuit_input_signals.rs  config.rs  encoding.rs  jwt.rs  mod.rs  sha.rs  witness_gen.rs
prover/: README.md
prover-service/: Cargo.toml  Dockerfile  circuit_config.yml  config.yml  config_local_testing.yml
prover-service/scripts/: dev_setup.sh
prover-service/src/: api.rs  config.rs  deployment_information.rs  error.rs  groth16_vk.rs  handlers.rs  jwk_fetching.rs  keyless_config.rs  lib.rs  load_vk.rs  logging.rs  main.rs  metrics.rs  prover_config.rs  prover_handler.rs  prover_key.rs  prover_state.rs  proving.rs  request_handler.rs  state.rs  utils.rs  witness_gen.rs
prover-service/src/config/: mod.rs
prover-service/src/external_resources/: jwk_fetcher.rs  jwk_fetching.rs  jwk_types.rs  mod.rs  prover_config.rs
prover-service/src/input_processing/: field_check_input.rs  field_parser.rs  input_signals.rs  mod.rs  public_inputs_hash.rs  rsa.rs  types.rs
prover-service/src/request_handler/: deployment_information.rs  handler.rs  mod.rs  prover_handler.rs  prover_state.rs  training_wheels.rs  types.rs  witness_gen.rs
prover-service/src/tests/: federated_jwk.rs  jwk_fetcher.rs  jwk_fetching.rs  mod.rs  playground.rs  prover_handler.rs  request_handler.rs  smoke.rs  training_wheels.rs  types.rs  utils.rs
prover-service/src/tests/common/: mod.rs  types.rs
prover-service/src/training_wheels/: mod.rs  sign.rs  verification_logic.rs
prover-service/src/types/: groth16_vk.rs  mod.rs
prover/scripts/: dev_setup.sh
prover/src/: config.rs  handlers.rs  main.rs  state.rs
release-helper/src/: main.rs
rust-rapidsnark/: Cargo.toml  build.rs
rust-rapidsnark/rapidsnark/: meson.build
rust-rapidsnark/rapidsnark/.cache/clangd/index/: Customize.h.140ED7A344E8D811.idx  MapMemory.h.4AF78B3C4C427478.idx  Statistics.h.89564DF89EBE7B74.idx  Synchronize.h.3A41FBD00638C4F4.idx  TypeDefinitions.h.0422BB820D812D86.idx  _aggregator.h.347CE06742C58D52.idx  _aligned_space.h.949054BC4FE3DA04.idx  _allocator_traits.h.29A5040C08C48C07.idx  _assert.h.A1A0A70FA2C06742.idx  _attach.h.81B251A589B94DCA.idx  _concurrent_queue_base.h.A2863D7830C5FF32.idx  _concurrent_skip_list.h.020A21C7F6E2428F.idx  _concurrent_unordered_base.h.464242E131B70624.idx  _config.h.28530F5A3D9A6235.idx  _containers_helpers.h.09AA1C2F7BAD87B8.idx  _exception.h.885F2D409193F094.idx  _export.h.C91D57CBEA2392DD.idx  _flow_graph_body_impl.h.9217579ED2AB4F19.idx  _flow_graph_cache_impl.h.C705E80A07D1326D.idx  _flow_graph_impl.h.1D387698AA046BDF.idx  _flow_graph_indexer_impl.h.11959DE59BD08E3A.idx  _flow_graph_item_buffer_impl.h.1520C56DC9892B14.idx  _flow_graph_join_impl.h.2EA789DF14EF4DBD.idx  _flow_graph_node_impl.h.4CE7C3D666F2C03C.idx  _flow_graph_node_set_impl.h.25B6C0468B2605C2.idx  _flow_graph_nodes_deduction.h.600A981A9DF4D676.idx  _flow_graph_tagged_buffer_impl.h.2C6411F031AEBC28.idx  _flow_graph_trace_impl.h.853B475D2EC587C6.idx  _flow_graph_types_impl.h.9511A2ADD46DC22E.idx  _hash_compare.h.0E34CF253A5FDEE2.idx  _intrusive_list_node.h.1C69A95074E19E33.idx  _machine.h.A9B8FC65658C2C51.idx  _mutex_common.h.DD83C3D8DE3AC82A.idx  _namespace_injection.h.BA754A22B4C1E12E.idx  _node_handle.h.A84C0FF16F58C639.idx  _pipeline_filters.h.DA65076D7216BFB8.idx  _pipeline_filters_deduction.h.4882C782BBF4D186.idx  _range_common.h.4965E51D7047A6FD.idx  _rtm_mutex.h.84EF2C89858A34D0.idx  _rtm_rw_mutex.h.7E0B20A4473DDDBE.idx  (+416 more)
rust-rapidsnark/src/: lib.rs
scripts/: Dockerfile  compile-r1cs.sh  run_prover_service.sh  rust_lint.sh  setup_environment.sh  task.sh
scripts/python/: circuit.py  main.py  misc.py  prover_service.py
scripts/python/setup/: __init__.py  cache.py  gh_release.py  testing_setup.py
scripts/python/setups/: __init__.py  cache.py  ceremony_setup.py  gh_release.py  testing_setup.py
scripts/python/trusted_setup/: __init__.py  prepare_setups.py
scripts/python/utils/: __init__.py  manage_deps.py
vk-diff/: Cargo.toml  README.md
vk-diff/src/: groth16_vk.rs  main.rs
