[workspace]
resolver = "2"

members = ["circuit", "keyless-common", "prover-service", "release-helper", "rust-rapidsnark", "vk-diff"]

[workspace.package]
authors = ["Aptos Labs <opensource@aptoslabs.com>"]
edition = "2021"
homepage = "https://aptoslabs.com"
license = "GPL3"
publish = false
repository = "https://github.com/aptos-labs/keyless-zk-proofs"
rust-version = "1.85.0"

[workspace.dependencies]
anyhow = "1.0.98"
aptos-build-info = { git = "https://github.com/aptos-labs/aptos-core", rev = "0ce3ac3a3e51c57b7e02ca8ed9010f6eda67d627" }
aptos-crypto = { git = "https://github.com/aptos-labs/aptos-core", branch = "main" } # TODO: pin to a specific rev
aptos-crypto-derive = { git = "https://github.com/aptos-labs/aptos-core", rev = "0ce3ac3a3e51c57b7e02ca8ed9010f6eda67d627" }
aptos-infallible = { git = "https://github.com/aptos-labs/aptos-core", rev = "0ce3ac3a3e51c57b7e02ca8ed9010f6eda67d627" }
aptos-keyless-common = { path = "keyless-common" }
aptos-logger = { git = "https://github.com/aptos-labs/aptos-core", rev = "0ce3ac3a3e51c57b7e02ca8ed9010f6eda67d627" }
aptos-metrics-core = { git = "https://github.com/aptos-labs/aptos-core", rev = "0ce3ac3a3e51c57b7e02ca8ed9010f6eda67d627" }
aptos-time-service = { git = "https://github.com/aptos-labs/aptos-core", rev = "0ce3ac3a3e51c57b7e02ca8ed9010f6eda67d627", features = [
  "async",
] }
aptos-types = { git = "https://github.com/aptos-labs/aptos-core", branch = "main" } # TODO: pin to a specific rev
ark-bn254 = "0.4.0"
ark-ff = "0.4.0"
ark-groth16 = "0.4.0"
ark-serialize = "0.4.0"
async-trait = "0.1.53"
base64 = "0.13.0"
bcs = { git = "https://github.com/aptos-labs/bcs.git", rev = "d31fab9d81748e2594be5cd5cdf845786a30562d" }
bindgen = "0.69.2"
chrono = "0.4.41"
clap = { version = "4.5.51", features = [
  "derive",
  "env",
  "unstable-styles",
  "wrap_help",
] }
figment = { version = "0.10.14", features = ["yaml", "env"] }
hex = { version = "0.4.3", features = ["serde"] }
http = "1.0.0"
hyper = { version = "0.14.18", features = ["full"] }
itertools = "0.13"
jsonwebtoken = "8.1"
maplit2 = "1.0.5"
num-bigint = "0.4.4"
num-traits = "0.2.17"
once_cell = "1.19.0"
prometheus = "0.13.3"
rand = "0.7.3"
regex = "1.10.5"
reqwest = { version = "0.11.24", features = ["json", "stream"] }
rsa = "0.9.6"
rust-rapidsnark = { path = "rust-rapidsnark" }
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
serde_yaml = "0.9.31"
serial_test = "3.0.0"
sha2 = "0.10.8"
shellexpand = "3.1.0"
strum_macros = "0.24"
tempfile = "3.23.0"
thiserror = "1.0.57"
tokio = { version = "1.35.1", features = ["full"] }
tower = "0.4.13"
tower-http = { version = "0.5.1", features = ["cors"] }
ureq = { version = "1.5.4", features = [
  "json",
  "native-tls",
], default-features = false }
url = { version = "2.5.4" }
uuid = { version = "1.17.0", features = ["v4"] }

[profile.release]
debug = true
overflow-checks = true

[patch.crates-io]
merlin = { git = "https://github.com/aptos-labs/merlin" }
x25519-dalek = { git = "https://github.com/aptos-labs/x25519-dalek", branch = "zeroize_v1" }
