[package]
name = "aptos-keyless-vk-diff"
description = "Aptos Keyless VK diff tool"
version = "0.1.0"

# Workspace inherited keys
authors = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
publish = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }

[dependencies]
aptos-keyless-common = { workspace = true }
clap = { workspace = true }
serde_json = { workspace = true }
strum_macros = { workspace = true }
ureq = { workspace = true }
url = { workspace = true }
